@@ -136,6 +136,8 @@ void CCvcDb::AlreadyShorted(CEventQueue& theEventQueue, deviceId_t theDeviceId, 
 	} else {
 		if ( theEventQueue.queueType == SIM_QUEUE ) {
 			if ( deviceType_v[theDeviceId] != FUSE_OFF ) {
+				if ( theConnections.sourcePower_p->type[HIZ_BIT] && theConnections.sourcePower_p->relativeFriendly && theConnections.sourcePower_p->family == theConnections.drainPower_p->powerSignal ) return;
+				if ( theConnections.drainPower_p->type[HIZ_BIT] && theConnections.drainPower_p->relativeFriendly && theConnections.drainPower_p->family == theConnections.sourcePower_p->powerSignal ) return;
 				ReportShort(theDeviceId);
 			}
 		} else {
